fixed the sticky footer covering my main content in the index page by setting a min-height for the body of the page

--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ html {
 }
 
 body {
+    min-height: 1050px;
     margin-bottom: 60px;
+    clear: both;
     /* Margin bottom by footer height */
     background-image: url('images/background-4.jpg');
     background-repeat: no-repeat;
